<resources>
    <string name="app_name"> Duin Forms</string>
    <string name="form_titulo">Ingrese sus Datos</string>
    <string name="nombre_comlpeto">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripción del contactos</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="KEY_USUARIO">KEY_USUARIO</string>
    <string name="confirmar_datos_titulo">Confirmar Datos</string>
    <string name="texto_boton_editar">Editar Datos</string>
    <string name="conf_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="conf_descripcion_contacto">Descripción:</string>
    <string name="conf_telefono">Tel:</string>
    <string name="conf_email">Email:</string>

</resources>
