<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="joseduin.formulario.ConfirmarDatos">

    <TextView
        android:text="@string/confirmar_datos_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_top"
        android:theme="@style/confirmar_datos_titulo" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confNombre"
        android:textSize="@dimen/conf_nombre"
        android:theme="@style/texto_negrita"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/conf_margin_top"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/conf_fecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/texto_negrita"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/conf_margin_left"
            android:id="@+id/confFechaNacimiento"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/conf_margin_top"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/conf_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/texto_negrita"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confTelefono"
            android:layout_marginLeft="@dimen/conf_margin_left"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/conf_margin_top"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/conf_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/texto_negrita"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confEmail"
            android:layout_marginLeft="@dimen/conf_margin_left"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/conf_margin_top"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/conf_descripcion_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/texto_negrita"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confDescripcion"
            android:layout_marginLeft="@dimen/conf_margin_left"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:text="@string/texto_boton_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto"
        android:theme="@style/MiBotonRaised"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_gravity="center"
        android:id="@+id/botonEditar" />

</LinearLayout>
